CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(homework1 VERSION 1.0.0)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_WARNING_FLAGS "-Wall -Wextra -Wpedantic")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_WARNING_FLAGS}")
ADD_EXECUTABLE(${PROJECT_NAME} homework1.cpp)

